[package]
name = "blocktest-converter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.149"

# alloy
alloy-consensus = "1.7.3"
alloy-eips = "1.7.3"
alloy-genesis = "1.7.3"
alloy-primitives = "1.5.7"
alloy-rlp = "0.3.13"

# reth
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", features = ["rayon"]}
reth-consensus = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", features = ["disable-lock"] }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", }
reth-provider = { git = "https://github.com/paradigmxyz/reth", features = ["test-utils"]  }
reth-evm = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth"}
revm = { version = "34.0.0", features = ["secp256k1", "blst", "c-kzg", "memory_limit"]}
ef-tests = {git = "https://github.com/paradigmxyz/reth",}
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
